--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==3.1.3
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.3
+python-decouple==3.8
 pytz==2023.3.post1
 referencing==0.32.1
 rpds-py==0.17.1
